--- a/index.html
+++ b/index.html
@@ -75,32 +75,32 @@
 </head>
 <body>
   <h1>🔥 Гриферское Выживание 🔥</h1>
-  <p>Сервер Minecraft 1.16–1.20 | Без правил | Настоящий хардкор</p>
+  <p>Сервер Minecraft 1.16–1.20 | Евенты | Настоящий хардкор</p>
 
   <div class="section">
-    <h2>🎮 IP: play.yourserver.ru</h2>
-    <button class="btn" onclick="window.location.href='minecraft://play.yourserver.ru';">Играть сейчас</button>
+    <h2>🎮 IP: toolcube.funserver.top</h2>
+    <button class="btn" onclick="window.location.href='minecraft://toolcube.funserver.top';">Играть сейчас</button>
   </div>
 
   <div class="section">
     <h2>📰 Последние новости</h2>
     <ul>
-      <li>[12.05.2025] Сервер открыт!</li>
-      <li>[10.05.2025] Новая система доната!</li>
-      <li>[01.05.2025] Открытие нового сезона!</li>
+      <li>[12.05.2025] Сервер >> на разработке!</li>
+      <li>[12.05.2025] Новая система доната!</li>
+      <li>[12.05.2025] Открытие нового сезона!</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>⚡ Присоединяйтесь к нам в социальных сетях!</h2>
     <div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Discord_logo.svg" alt="Discord" class="icon" onclick="window.location.href='https://discord.gg/yourserver'">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Twitter_logo_2012.svg" alt="Twitter" class="icon" onclick="window.location.href='https://twitter.com/yourserver'">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Discord_logo.svg" alt="Discord" class="icon" onclick="window.location.href='https://discord.gg/NJk7aCEV'">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Twitter_logo_2012.svg" alt="Telegram" class="icon" onclick="window.location.href='https://t.me/ToolCubeEx'">
     </div>
   </div>
 
   <footer>
-    <p>© 2025 GriefCraft. Неофициальный сайт.</p>
+    <p>© 2025 ToolCube. Официальный сайт.</p>
   </footer>
 </body>
 </html>
