--- a/donate.html
+++ b/donate.html
@@ -134,7 +134,7 @@
   </div>
 
   <footer>
-    <p>© 2025 GriefCraft. Неофициальный сайт.</p>
+    <p>© 2025 ToolCube. Официальный сайт.</p>
   </footer>
 </body>
 </html>
