--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="section">
     <h2>⚡ Присоединяйтесь к нам в социальных сетях!</h2>
     <div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Discord_logo.svg" alt="Discord" class="icon" onclick="window.location.href='https://discord.gg/yourserver'">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Discord_logo.svg" alt="Discord" class="icon" onclick="window.location.href='https://discord.gg/NJk7aCEV'">
       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Twitter_logo_2012.svg" alt="Telegram" class="icon" onclick="window.location.href='https://t.me/ToolCubeEx'">
     </div>
   </div>
