--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   <div class="section">
     <h2>💎 Донат Привилегии</h2>
-    <button class="btn" onclick="window.location.href='donate.html';">Посмотреть Донат Привилегии</button>
+    <button class="btn" onclick="window.location.href='https://toolcubeex.easydonate.ru/';">Посмотреть Донат Привилегии</button>
   </div>
 
   <div class="section">
